# SSE-test

./: .gitignore  Cargo.toml  Dockerfile  package-lock.json  package.json  sse-load-test.js
src/: lib.rs  main.rs
src/models/: connected_users.rs  connected_users_old.rs  mod.rs
src/routes/: connected_users.rs  mod.rs  save_answers.rs  sync_timer.rs
src/utils/: connection_request.rs  mod.rs
