[package]
name = "test-timer"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11"
actix-files = "0.6"
futures="0.3"
futures-util = "0.3"
actix-web-lab="0.24"
tokio-stream="0.1"
serde={ version = "1.0", features = ["derive"] }
